# SmartFuzz

./: Additional Comparison with Generation-Based Fuzzers.md  Additional comparison with AI-based fuzzing baselines.md  README.md
DBMS_BUG_Knowledge_Base/: readme.md
DBMS_BUG_Knowledge_Base/Monetdb/: Monetdb.py  monetdb_bugs.csv  monetdb_bugs_about_view.csv
DBMS_BUG_Knowledge_Base/Monetdb/bugs/: bug_110.json  bug_115.json  bug_1154.json  bug_120.json  bug_122.json  bug_1224.json  bug_1226.json  bug_1227.json  bug_1241.json  bug_1248.json  bug_1279.json  bug_1284.json  bug_1294.json  bug_1307.json  bug_1331.json  bug_1332.json  bug_1333.json  bug_1336.json  bug_1339.json  bug_1342.json  bug_1354.json  bug_1384.json  bug_1386.json  bug_1432.json  bug_1434.json  bug_144.json  bug_1471.json  bug_1483.json  bug_149.json  bug_1493.json  bug_1494.json  bug_1495.json  bug_1497.json  bug_1498.json  bug_1501.json  bug_1504.json  bug_1506.json  bug_1507.json  bug_1508.json  bug_152.json  (+800 more)
DBMS_BUG_Knowledge_Base/Monetdb/exbugs/: ClickHouse__bug_84658.json  ClickHouse__bug_84661.json  ClickHouse__bug_84702.json  ClickHouse__bug_84707.json  ClickHouse__bug_84711.json  ClickHouse__bug_84718.json  ClickHouse__bug_84736.json  ClickHouse__bug_84754.json  ClickHouse__bug_84758.json  ClickHouse__bug_84775.json  ClickHouse__bug_84777.json  ClickHouse__bug_84888.json  ClickHouse__bug_84895.json  ClickHouse__bug_84937.json  ClickHouse__bug_84981.json  ClickHouse__bug_85021.json  ClickHouse__bug_85066.json  ClickHouse__bug_85097.json  ClickHouse__bug_85103.json  ClickHouse__bug_85161.json  ClickHouse__bug_85167.json  ClickHouse__bug_85169.json  ClickHouse__bug_85170.json  ClickHouse__bug_85173.json  ClickHouse__bug_85181.json  ClickHouse__bug_85184.json  ClickHouse__bug_85313.json  ClickHouse__bug_85357.json  ClickHouse__bug_85368.json  ClickHouse__bug_85409.json  ClickHouse__bug_85413.json  ClickHouse__bug_85446.json  ClickHouse__bug_85509.json  ClickHouse__bug_85528.json  ClickHouse__bug_85552.json  ClickHouse__bug_85596.json  ClickHouse__bug_85633.json  ClickHouse__bug_85677.json  ClickHouse__bug_85782.json  ClickHouse__bug_85845.json  (+2951 more)
DBMS_BUG_Knowledge_Base/Monetdb/seed_txt/: bugs__bug_115.txt  bugs__bug_1154.txt  bugs__bug_120.txt  bugs__bug_122.txt  bugs__bug_1224.txt  bugs__bug_1248.txt  bugs__bug_1279.txt  bugs__bug_1284.txt  bugs__bug_1294.txt  bugs__bug_1307.txt  bugs__bug_1331.txt  bugs__bug_1332.txt  bugs__bug_1339.txt  bugs__bug_1342.txt  bugs__bug_1354.txt  bugs__bug_1384.txt  bugs__bug_1386.txt  bugs__bug_1432.txt  bugs__bug_1434.txt  bugs__bug_144.txt  bugs__bug_1471.txt  bugs__bug_1483.txt  bugs__bug_149.txt  bugs__bug_1493.txt  bugs__bug_1495.txt  bugs__bug_1497.txt  bugs__bug_1498.txt  bugs__bug_1501.txt  bugs__bug_1504.txt  bugs__bug_1506.txt  bugs__bug_1507.txt  bugs__bug_1508.txt  bugs__bug_152.txt  bugs__bug_1527.txt  bugs__bug_1528.txt  bugs__bug_1529.txt  bugs__bug_1550.txt  bugs__bug_156.txt  bugs__bug_1560.txt  (+3084 more)
DBMS_BUG_Knowledge_Base/mysql/: mysql.py  mysql_bugs.csv  mysql_bugs_about_view.csv
DBMS_BUG_Knowledge_Base/oceanbase/: ocean_bugs.csv  ocean_bugs_about_view.csv  oceanbase.py
DBMS_BUG_Knowledge_Base/sqlite/: crawl_sqlite.py  grep_sql.py  sqlite_core_crashes.csv
Squirrel/: CMakeLists.txt  README.md  build_squirrel.sh  check_instrument.sh  run_clickhouse.sh  run_duckdb.sh  run_monetdb.sh  run_monetdb_server.sh  run_mysql.sh  run_postgres.sh  run_virtuoso.sh  test.json  test_client.yml
Squirrel/data/: clickhouse_config.xml  config_clickhouse.yml  config_duckdb.yml  config_monetdb.yml  config_mysql.yml  config_virtuoso.yml  run.sh
Squirrel/preprocessed_configs/: virtuoso.ini
Squirrel/scripts/: find_seed_origin.py
Squirrel/scripts/dockers/mariadb/: Dockerfile
Squirrel/scripts/dockers/mysql/: Dockerfile
Squirrel/scripts/dockers/postgresql/: Dockerfile
Squirrel/scripts/start_client/: start_clickhouse.sh
Squirrel/scripts/utils/: run.py  split.sh  sqlite.output  status  uuid
Squirrel/srcs/: db_driver.cc  db_factory.cc
Squirrel/srcs/internal/clickhouse/: clickhouse.cc  clickhouse.h  test_clickhouse_mutator.cpp
Squirrel/srcs/internal/clickhouse/include/: ast.h
Squirrel/srcs/internal/clickhouse/parser/: bison copy 2.y  flex_lexer.cpp
Squirrel/srcs/internal/clickhouse/srcs/: ast copy.cpp  ast.cpp  mutator.cpp  utils.cpp
Squirrel/srcs/internal/client/: client.cc  client.h  client_clickhouse.cc  client_clickhouse.h  client_clickhouse111.cc  client_monetdb.cc  client_monetdb.h  client_mysql.cc  client_mysql.h  client_postgresql.h  client_virtuoso.cc  client_virtuoso.h  logger.cc  logger.h  server_up.cc  test_client.cc
Squirrel/srcs/internal/duckdb/: duckdb.cc  duckdb.h  test_duckdb_mutator.cpp
Squirrel/srcs/internal/duckdb/include/: ast.h  define.h  utils.h
Squirrel/srcs/internal/duckdb/parser/: Makefile  bison_parser.cpp  bison_parser.h  bison_parser.output  bison_parser.y  flex_lexer.cpp  flex_lexer.h  flex_lexer.l  lex.hsql_.c
Squirrel/srcs/internal/duckdb/srcs/: ast.cpp  mutator.cpp  utils.cpp
Squirrel/srcs/internal/monetdb/: monetdb.cc  monetdb.h  test_monetdb_mutator.cpp
Squirrel/srcs/internal/monetdb/include/: ast.h  utils.h
Squirrel/srcs/internal/monetdb/parser/: bison copy.y  bison.y  bison_parser.cpp  bison_parser.h  bison_parser.output  flex.l  flex_lexer.cpp  flex_lexer.h
Squirrel/srcs/internal/monetdb/srcs/: ast.cpp  mutator.cpp  utils.cpp
Squirrel/srcs/internal/mysql/srcs/: mutator.cpp
Squirrel/srcs/internal/sqlite/srcs/: mutator.cpp
Squirrel/srcs/internal/virtuoso/: test_virtuoso_mutator.cpp  virtuoso.cc  virtuoso.h
Squirrel/srcs/internal/virtuoso/include/: define.h  utils.h
Squirrel/srcs/internal/virtuoso/parser/: Makefile  bison copy 2.y  bison copy.y  bison.y  bison_parser.cpp  bison_parser.h  bison_parser.output  flex.l  flex_lexer.h
Squirrel/srcs/internal/virtuoso/srcs/: mutator.cpp
Squirrel/srcs/utils/: config_validate.cc
Squirrel/yjl-utils/test_dbms/duckdb_harness/: CMakeLists.txt  fuzz_target.cpp  fuzz_target_new.cpp  fuzz_wrapper.cpp  run_crash_poc.py
feature_seed/: README.md
(+85319 files in other folders)
